--- a/public/stylesheets/infopage.css
+++ b/public/stylesheets/infopage.css
@@ -6,8 +6,13 @@
 	margin: 0;
     padding: 0;
     min-width: 100%;
-    min-height: 850px;    
+    min-height: 850px;  
+    padding-left:30px;
+	padding-right:30px; 
+	padding-top: 50px; 
+	margin-bottom: 30px;
 }
+
 #container .image-container {
 	display: block;
 	top:-10px;
@@ -17,6 +22,7 @@
 	max-width: 500px;
 	max-height: 500px;
 	overflow:hidden;
+	padding-bottom:100px;
 }
 
 .animalName{
@@ -38,15 +44,15 @@
 .p2{
 	font-size:14px;
 	position: absolute;
-	bottom: 40px;
-	right: 80px;
+	bottom: 0px;
+	right: 70px;
 	color: black;
 }
 
 .p3{
 	font-size:14px;
 	position: absolute;
-	bottom: 80px;
+	bottom: 60px;
 	left: 80px;
 	color: black;
 }
@@ -62,20 +68,21 @@
 .p5{
 	font-size:14px;
 	position: absolute;
-	bottom: -30px;
+	bottom: -70px;
 	color: black;
   	align-items: center;
   	left:360px;
   	max-width: 50%;
-  	max-height:30%;  
+  	max-height:30%;
+  	padding-top:30px;
 }
 
 .p6{
 	font-size:14px;
 	position: absolute;
 	color: black;
-  	align-items: center;
-	bottom: -120px;
+
+	bottom: -140px;
 	left: 80px;
   	max-width: 50%;
   	max-height:30%;  
@@ -162,7 +169,7 @@
 }
  
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   text-align: center;
   font-weight: bold;
 }
@@ -249,4 +256,147 @@ main .content {
   -webkit-filter: blur(2px);
   filter: blur(2px);
   /* quite laggy :S */
+}
+/*
+----------------------------------------------------------------------------------------
+*/
+$primary-col: #03A9F4;
+$accent-col: #FFC400;
+$accent-fallback: #FFD740;
+
+$font-stack: 'Roboto', sans-serif;
+$easer: cubic-bezier(0.4, 0, 0.2, 1);
+
+body {
+  font-family: $font-stack;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: #FFF;
+  background: $body-bg;
+}
+
+h1{
+  font-weight: 700;
+  font-size: 64px;
+  margin: 20px 0 0 0;
+  padding: 0 20px;
+}
+
+a {
+  color: #28f;
+  text-decoration: none;
+  padding-right: 10px;
+  cursor: pointer;
+    font-style: normal;
+}
+a:hover, a:focus {
+  color: #0062d5;
+}
+a:active {
+  color: #003f88;
+}
+
+p{
+  font-size: 16px;
+  padding: 0 20px;
+}
+
+em{
+  font-style: normal;
+  color: $accent-col;
+}
+
+.sub{
+  margin: 0;
+}
+
+.button{
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  display: inline-block;
+  font-size: 30px;
+  line-height: 60px;
+
+  transition: all 0.7s $easer;
+}
+.button.expand {
+  -webkit-transform: rotate(585deg); 
+      -ms-transform: rotate(585deg); 
+          transform: rotate(585deg);
+
+  transition: all 0.5s $easer;
+}
+
+.container {
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 5vh;  
+  background-color: $primary-col;
+
+  border-radius: 50%;
+  width: 60px;
+  max-width: 60px;
+  height: 60px;
+  text-align: center;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  overflow: hidden;
+
+  transition: all 0.2s 0.45s,
+              height 0.2s $easer 0.25s, 
+              max-width 0.2s $easer 0.35s, 
+              width 0.2s $easer 0.35s;
+}
+.container.expand {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.17);
+  border-radius: 0;
+  width: 80%;
+  height: 500px;
+  max-width: 700px;
+  padding: 0;
+
+  transition: all 0.2s, max-width 0.2s $easer 0.1s, height 0.3s ease 0.25s;
+}
+
+.content {
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  text-align: left;
+
+  transition: transform 0.2s $easer, opacity 0.2s 0.2s;
+}
+.content.expand {
+  transform: translateY(0px);
+  opacity: 1;
+  transition: transform 0.7s $easer 0.05s, opacity 0s;
+}
+
+.content .head {
+  padding: 0 0 20px 0;
+}
+.content .body {
+  color: #000;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #FFF;
+  width: 100%;
+  height: 100%;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+
+.action-bar {
+  padding-left: 15px;
+  border-top: 1px solid #E0E0E0;
+  width: 100%;
+}
+.action-bar a {
+  text-transform: uppercase;
+  line-height: 52px;
+  color: $accent-col;
 }
